prevent secondarynav overlap with header

--- a/roc-candy.css
+++ b/roc-candy.css
@@ -282,7 +282,7 @@ pre, code.CodeSnippet {color:var(--DefaultRedColor);}
 
 @media (min-width : 801px) {
     #MainContent {
-        padding-top: 25px;
+        padding-top: 25px; /*35px - prevent secondarynav overlap*/
         margin-top:10px;
         border-radius: 18px 18px 0px 0px;
     }
@@ -291,6 +291,8 @@ pre, code.CodeSnippet {color:var(--DefaultRedColor);}
         margin-bottom: -16px !important;
         padding-bottom: 16px !important;
     }
+	/*prevent secondarynav overlap - alternate method*/
+	#PageTitle {margin-top: 10px;margin-bottom: -10px;}
     
     /* only keep this if you want the borders*/
     /* if not, comment it out                */
